# sun-tracker

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md
.github/workflows/: ci.yml  doxygen.yml  pi-hw.yml
docs/: DEPENDENCIES.md  REPRODUCIBILITY.md  build_and_run.md  latency_measurement.md  realtime_analysis.md  requirements.md  solid_justification.md  state_machine.md  system_architecture.md  testing.md  user_stories_use_cases.md  workflow.md
include/actuators/: ActuatorManager.hpp  ServoDriver.hpp
include/app/: SystemFactory.hpp
include/common/: LatencyMonitor.hpp  Logger.hpp  ThreadSafeQueue.hpp  Types.hpp
include/control/: Kinematics3RRS.hpp
include/hal/: LinuxI2CDevice.hpp
include/ui/: OverlayDraw.hpp
include/vision/: SunTracker.hpp
src/: main.cpp
src/actuators/: ActuatorManager.cpp  CMakeLists.txt  PCA9685.cpp  PCA9685.hpp  ServoDriver.cpp
src/actuators/test/: CMakeLists.txt  test_servodriver.cpp
src/app/: AppConfig.cpp  AppConfig.hpp  Application.cpp  Application.hpp  CMakeLists.txt  CliController.cpp  CliController.hpp  LinuxEventLoop.cpp  LinuxEventLoop.hpp  SystemFactory.cpp
src/common/: CMakeLists.txt  LatencyMonitor.cpp  Logger.cpp
src/common/test/: CMakeLists.txt
src/control/: CMakeLists.txt  Controller.cpp  Controller.hpp  Kinematics3RRS.cpp
src/control/test/: CMakeLists.txt  test_kinematics.cpp
src/hal/: CMakeLists.txt  II2CDevice.hpp  LinuxI2CDevice.cpp
src/hal/test/: CMakeLists.txt  test_linux_i2c_hw.cpp
src/qt/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main_qt.cpp
src/scripts/: collect_latency_pi.sh  run_hw_tests_pi.sh
src/sensors/: CMakeLists.txt  CameraPublisher.hpp  ICamera.hpp  LibcameraPublisher.cpp  LibcameraPublisher.hpp  SimulatedPublisher.cpp  SimulatedPublisher.hpp
src/sensors/test/: CMakeLists.txt
src/system/: CMakeLists.txt  SystemManager.cpp  SystemManager.hpp  TrackerState.hpp
src/system/test/: CMakeLists.txt  test_systemmanager_statemachine.cpp
src/ui/: CMakeLists.txt  OverlayDraw.cpp  UiViewer.cpp  UiViewer.hpp
src/vision/: CMakeLists.txt  SunTracker.cpp
src/vision/test/: CMakeLists.txt
tests/: CMakeLists.txt  FakeI2CDevice.hpp  servo_manual_smoketest.cpp  test_actuatormanager.cpp  test_common.hpp  test_controller.cpp  test_latency_monitor.cpp  test_libcamera_hw.cpp  test_main.cpp  test_pca9685.cpp  test_suntracker.cpp  test_threadsafequeue.cpp  test_trajectory_circular.cpp
